@@ -1,5 +1,7 @@
 2009-08-10  Sebastian Marsching <sebastian.marsching@1und1.de>
 
+	Removed config-include support.
+
 	Added extension point support for direct output pages
 
 2009-08-07  Sebastian Marsching <sebastian.marsching@1und1.de>
